fix: adjust padding for promo content on small screens

--- a/src/assets/css/modules/_promo.scss
+++ b/src/assets/css/modules/_promo.scss
@@ -22,6 +22,10 @@
         border-top: 5px solid colors.$color-primary;
         border-radius: 8px;
 
+        @media screen and (max-width: 580px) {
+            padding: 51px;
+        }
+
         &-title {
             margin-bottom: 1rem;
             font-size: 36px;
